// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Label 1`] = `
.c0 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
  display: inline-block;
}

<label
  className="c0"
  color="palette.charcoal700"
  fontSize="xsmall"
  fontWeight="semiBold"
  htmlFor="party"
>
  🎉
</label>
`;

exports[`Label supports fontWeight 1`] = `
.c0 {
  color: #343C42;
  font-weight: 400;
  font-size: 0.75rem;
  display: inline-block;
}

<label
  className="c0"
  color="palette.charcoal700"
  fontSize="xsmall"
  fontWeight="normal"
  htmlFor="party"
>
  test
</label>
`;
